--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "grunt-autoprefixer": "^3.0.3",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-jade": "^0.15.0",
+    "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^1.0.0",
     "grunt-svgstore": "^0.5.0"
