--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
   "devDependencies": {
     "autoprefixer": "^9.4.5",
     "browser-sync": "^2.26.3",
-    "cheerio": "^1.0.0-rc.2",
-    "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.8",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
@@ -41,7 +39,6 @@
     "gulp-strip-debug": "^3.0.0",
     "gulp-svgmin": "^2.1.0",
     "gulp-svgstore": "^7.0.1",
-    "gulp-uglify": "^3.0.1",
-    "through2": "^3.0.0"
+    "gulp-uglify": "^3.0.1"
   }
 }
