--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp",
     "dev": "gulp devbuild && gulp serve",
-    "clean": "gulp clean"
+    "clean": "gulp clean",
+    "clear": "gulp clear"
   },
   "repository": {
     "type": "git",
